[gd_scene load_steps=25 format=3 uid="uid://c8hhc3t0dwcsb"]

[ext_resource type="PackedScene" uid="uid://bvuigrh12vy2x" path="res://Scenes/player.tscn" id="1_1ysf5"]
[ext_resource type="Texture2D" uid="uid://73d60i502x16" path="res://Assets/spring/6.png" id="6_ppkcc"]
[ext_resource type="PackedScene" uid="uid://bff257lprdyix" path="res://Scenes/enemy1.tscn" id="8_8uiol"]
[ext_resource type="FontFile" uid="uid://bji88odmjixxg" path="res://Assets/Quiz/Dragon Fire.otf" id="9_kwdmd"]
[ext_resource type="Script" path="res://Scripts/quiz_manager.gd" id="9_sfqwk"]
[ext_resource type="Script" path="res://Scripts/dialog.gd" id="10_jwp8p"]
[ext_resource type="Texture2D" uid="uid://cx44pttmpf0cg" path="res://Assets/Quiz/Dialog Box.png" id="11_43doq"]
[ext_resource type="Script" path="res://Scripts/answers.gd" id="12_q4pqf"]
[ext_resource type="Script" path="res://Scripts/lives.gd" id="14_eovsv"]
[ext_resource type="Texture2D" uid="uid://dfl60u40je46m" path="res://Assets/Quiz/vecteezy_red-heart-in-pixel-art-style-8-bit-icon-valentine-s-day_5644880-removebg-preview.png" id="14_uljf5"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_bd6g7"]
distance = -6.0

[sub_resource type="Theme" id="Theme_y2d3a"]
default_font = ExtResource("9_kwdmd")
default_font_size = 24
RichTextLabel/colors/default_color = Color(1, 1, 1, 1)
RichTextLabel/colors/font_outline_color = Color(0, 0, 0, 1)
RichTextLabel/constants/outline_size = 3

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nrxxl"]
texture = ExtResource("11_43doq")

[sub_resource type="Theme" id="Theme_kf6n8"]
Panel/styles/panel = SubResource("StyleBoxTexture_nrxxl")

[sub_resource type="Theme" id="Theme_t6eah"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n0ilm"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4ea04"]
texture = ExtResource("11_43doq")

[sub_resource type="Theme" id="Theme_qu0bi"]
default_font = ExtResource("9_kwdmd")
default_font_size = 50
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/constants/outline_size = 3
Button/styles/normal = SubResource("StyleBoxTexture_4ea04")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ntrir"]
texture = ExtResource("11_43doq")

[sub_resource type="Theme" id="Theme_n53ra"]
default_font = ExtResource("9_kwdmd")
default_font_size = 50
Button/constants/outline_size = 3
Button/styles/normal = SubResource("StyleBoxTexture_ntrir")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gwoij"]
texture = ExtResource("11_43doq")

[sub_resource type="Theme" id="Theme_ams23"]
default_font = ExtResource("9_kwdmd")
default_font_size = 50
Button/constants/outline_size = 3
Button/styles/normal = SubResource("StyleBoxTexture_gwoij")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2haul"]
texture = ExtResource("11_43doq")

[sub_resource type="Theme" id="Theme_oj0af"]
default_font = ExtResource("9_kwdmd")
default_font_size = 50
Button/constants/outline_size = 3
Button/styles/normal = SubResource("StyleBoxTexture_2haul")

[node name="Game" type="Node2D"]

[node name="Background" type="Parallax2D" parent="."]
scroll_offset = Vector2(-268, 68)

[node name="6" type="Sprite2D" parent="Background"]
position = Vector2(269.2, -67.2)
scale = Vector2(0.21, 0.21)
texture = ExtResource("6_ppkcc")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)

[node name="Enemy_1" parent="." instance=ExtResource("8_8uiol")]
position = Vector2(306, 16)

[node name="Player" parent="." instance=ExtResource("1_1ysf5")]
position = Vector2(-252, 22)

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(-272, 55)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
shape = SubResource("WorldBoundaryShape2D_bd6g7")

[node name="QuizManager" type="Node" parent="."]
script = ExtResource("9_sfqwk")

[node name="Dialog" type="Control" parent="QuizManager"]
layout_mode = 3
anchors_preset = 0
offset_left = -377.0
offset_top = -205.0
offset_right = 376.0
offset_bottom = -91.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_y2d3a")
script = ExtResource("10_jwp8p")

[node name="Panel" type="Panel" parent="QuizManager/Dialog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_kf6n8")

[node name="VBoxContainer" type="VBoxContainer" parent="QuizManager/Dialog"]
layout_mode = 0
offset_left = 16.0
offset_top = 15.0
offset_right = 737.0
offset_bottom = 101.0

[node name="Question" type="RichTextLabel" parent="QuizManager/Dialog/VBoxContainer"]
layout_mode = 2
text = "Sample Question
"
fit_content = true

[node name="Timer" type="Timer" parent="QuizManager/Dialog/VBoxContainer"]

[node name="Answers" type="Control" parent="QuizManager"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("12_q4pqf")

[node name="Buttons" type="Panel" parent="QuizManager/Answers"]
layout_mode = 1
anchors_preset = -1
offset_left = -321.0
offset_top = 89.0
offset_right = 322.0
offset_bottom = 205.0
theme = SubResource("Theme_t6eah")
theme_override_styles/panel = SubResource("StyleBoxEmpty_n0ilm")

[node name="Button" type="Button" parent="QuizManager/Answers/Buttons"]
layout_mode = 1
anchors_preset = -1
offset_left = 4.0
offset_top = 5.0
offset_right = 767.0
offset_bottom = 128.0
scale = Vector2(0.41, 0.41)
theme = SubResource("Theme_qu0bi")
text = "Answer"

[node name="Button2" type="Button" parent="QuizManager/Answers/Buttons"]
layout_mode = 1
anchors_preset = -1
offset_left = 4.0
offset_top = 60.0
offset_right = 767.0
offset_bottom = 183.0
scale = Vector2(0.41, 0.41)
theme = SubResource("Theme_n53ra")
text = "Answer"

[node name="Button3" type="Button" parent="QuizManager/Answers/Buttons"]
layout_mode = 1
anchors_preset = -1
offset_left = 326.0
offset_top = 6.0
offset_right = 1089.0
offset_bottom = 129.0
scale = Vector2(0.41, 0.41)
theme = SubResource("Theme_ams23")
text = "Answer"

[node name="Button4" type="Button" parent="QuizManager/Answers/Buttons"]
layout_mode = 1
anchors_preset = -1
offset_left = 326.0
offset_top = 61.0
offset_right = 1089.0
offset_bottom = 184.0
scale = Vector2(0.41, 0.41)
theme = SubResource("Theme_oj0af")
text = "Answer"

[node name="Lives" type="Control" parent="QuizManager"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("14_eovsv")

[node name="CharacterLives" type="Panel" parent="QuizManager/Lives"]
layout_mode = 0
offset_left = -309.0
offset_top = -44.0
offset_right = -239.0
offset_bottom = -25.0
scale = Vector2(1.00252, 1)

[node name="CharLife2" type="Sprite2D" parent="QuizManager/Lives/CharacterLives"]
position = Vector2(36.0679, 10)
scale = Vector2(0.04, 0.04)
texture = ExtResource("14_uljf5")

[node name="CharLife1" type="Sprite2D" parent="QuizManager/Lives/CharacterLives"]
position = Vector2(11.0249, 10)
scale = Vector2(0.04, 0.04)
texture = ExtResource("14_uljf5")

[node name="CharLife3" type="Sprite2D" parent="QuizManager/Lives/CharacterLives"]
position = Vector2(59.8491, 10)
scale = Vector2(0.04, 0.04)
texture = ExtResource("14_uljf5")

[node name="EnemyLives" type="Panel" parent="QuizManager/Lives"]
layout_mode = 0
offset_left = 248.0
offset_top = -44.0
offset_right = 318.0
offset_bottom = -25.0
scale = Vector2(1.00252, 1)

[node name="EnemLife2" type="Sprite2D" parent="QuizManager/Lives/EnemyLives"]
position = Vector2(36.0679, 10)
scale = Vector2(0.04, 0.04)
texture = ExtResource("14_uljf5")

[node name="EnemLife1" type="Sprite2D" parent="QuizManager/Lives/EnemyLives"]
position = Vector2(11.0249, 10)
scale = Vector2(0.04, 0.04)
texture = ExtResource("14_uljf5")

[node name="EnemLife3" type="Sprite2D" parent="QuizManager/Lives/EnemyLives"]
position = Vector2(59.8492, 10)
scale = Vector2(0.04, 0.04)
texture = ExtResource("14_uljf5")
